# observability-log-py

./: README.md  pyproject.toml
docs/: onboarding-checklist.md
obslogpy/: __init__.py  fastapi.py  logging.py  otel.py  span.py
obslogpy/langfuse/: __init__.py  client.py  config.py  context.py  fastapi.py  litellm.py
tests/: test_langfuse_fastapi.py  test_langfuse_litellm.py  test_langfuse_observed_litellm.py  test_langfuse_trace_resolution.py
